--- a/core/templates/authenticated/assignments_table/base_corrected.html
+++ b/core/templates/authenticated/assignments_table/base_corrected.html
@@ -1,7 +1,7 @@
 {% extends 'authenticated/assignments_table/base.html' %}
 
 {% block table_header %}
-    Corrected Assignments
+    Corrected Assignments {% block corrected_table_help_tip %}{% endblock corrected_table_help_tip %}
 {% endblock table_header %}
 
 {% block table_id %}
