--- a/core/templates/authenticated/assignments_table/corrected_parent.html
+++ b/core/templates/authenticated/assignments_table/corrected_parent.html
@@ -1,5 +1,11 @@
 {% extends 'authenticated/assignments_table/corrected_student.html' %}
 
+{% block corrected_table_help_tip %}
+<div class='external_help_tip'>
+    <p> This is your child's Corrected Assignments Table. It shows you the list of your child's past corrected assignments with your child's scores. You can click on an assignment name to view your child's corrected submission, the subject to go to its page and the average to view the Assignment Performance Distribution graph.</p>
+</div>
+{% endblock corrected_table_help_tip %}
+
 {% block subject_column_data %}
     {% include 'authenticated/widgets/sub_id_link.html' with title="Click to open this subject&#39;s room" urlname=assignment.subject.urlname id=assignment.subject.id sub_id=child_id label=assignment.subject.label only %}
 {% endblock subject_column_data %}
