--- a/core/templates/authenticated/assignments_table/uncorrected.html
+++ b/core/templates/authenticated/assignments_table/uncorrected.html
@@ -1,7 +1,10 @@
 {% extends 'authenticated/assignments_table/base.html' %}
 
 {% block table_header %}
-    Uncorrected Assignments
+    Uncorrected Assignments 
+    <div class='external_help_tip'>
+        <p> This is your Uncorrected Assignments Table. It shows you the list of currently uncorrected assignments with their assigned and due date and percentage of submissions received. You can click on an assignment name to preview and the subject room to go to its page.</p>
+    </div>
 {% endblock table_header %}
 
 {% block table_id %}
