--- a/core/templates/authenticated/charts/parent_child_performance_breakdown.html
+++ b/core/templates/authenticated/charts/parent_child_performance_breakdown.html
@@ -1,4 +1,9 @@
-<h4 class="header header4">{{ name }}&#39;s Performance</h4>
+<h4 class="header header4">{{ name }}&#39;s Performance
+    <div class='external_help_tip'>
+        <p> This is your Child's Performance Breakdown. You can check your child's performance in each subject by clicking on the specified tab and the overall tab to see your child's performance in all subjects.
+         You can further click on the bars of each graph. Click on the child's 'My Performance' bar to view your child's submission in each assignment and click on the 'Class Average' bar to see the Assignment performance distribution graph. </p>
+    </div>
+</h4>
 <div id='performance_breakdown_{{id}}'>
     <div>
         <ul id='subjectbar_{{id}}' class="nav nav-tabs">
