--- a/core/templates/authenticated/widgets/announcements_table.html
+++ b/core/templates/authenticated/widgets/announcements_table.html
@@ -1,6 +1,10 @@
 <div class='row'>
     <div>
-        <h4 class="header header4">Recent Announcements</h4>
+        <h4 class="header header4">Recent Announcements 
+            <div class='external_help_tip'>
+                <p> These are your Recent Announcements. You can view all annoucements in this table. You can also sort annoucements by category by clicking on the up/down arrow next to the each of the categories.</p>
+            </div>
+        </h4>
 
         <div class="row scroll">
             <table id="announcement_table" class="table table-condensed table-striped table-hover" cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
