--- a/core/templates/authenticated/widgets/classrooms_table.html
+++ b/core/templates/authenticated/widgets/classrooms_table.html
@@ -1,5 +1,9 @@
 <div>
-    <h4 class="header header4">List of {{ classrooms_table.school_name }} Classrooms</h4>
+    <h4 class="header header4">List of {{ classrooms_table.school_name }} Classrooms
+        <div class='external_help_tip'>
+            <p> This is a list of all the classrooms in the school. You can click on each classroom to open up the classroom drop down and view each subject for that class. You can also further click on each class teacher and view the performance of the classes they teach or click on each subject and view that classrooms performance in the particular subject. </p>
+        </div>
+    </h4>
 
     <div class="row scroll">
         <table id="classroom_table" class="table table-condensed table-striped table-hover" cellspacing='0'>
