--- a/core/templates/authenticated/widgets/teacher_subjectroom_performance.html
+++ b/core/templates/authenticated/widgets/teacher_subjectroom_performance.html
@@ -1,4 +1,8 @@
-<h6 class="header header4"> Subject Room Performance</h6>
+<h6 class="header header4"> Subject Room Performance
+    <div class='external_help_tip'>
+        <p> This is the Subjectroom's Performance. One can view all past assignment performance in the shown graph. You can further click on the bars, 'Section Average' bar taking you to the Section Assignment Performance Distribution graph , while the 'Class Average' bar taking you to the Standard Assignment Performance Distribution graph. </p>
+    </div>
+</h6>
 <div id="teacher_subjectroom_performance">
     <div id="single_subjectroom_bargraph" class='chart scroll'>
         {% include "authenticated/charts/chart_loader.html" only %}
