--- a/core/static/css/external_help_tip.css
+++ b/core/static/css/external_help_tip.css
@@ -1,83 +1,60 @@
+/* changed  .help tip container to p */
+
 .external_help_tip{
-    position: absolute;
-    top: 18px;
-    right: 18px;
+    width: 24px; /* changed */
+    height: 24px; /* changed */
     text-align: center;
     background-color: #BCDBEA;
     border-radius: 50%;
-    width: 24px;
-    height: 24px;
     font-size: 14px;
     line-height: 26px;
     cursor: default;
-    display: inline-block;
+    position: relative;
+    display: inline; /* changed */
+    margin-left:10px; /* changed */
 }
 
 .external_help_tip:before{
     content:'?';
+    padding: 4px;
     font-weight: bold;
     color:#fff;
 }
 
-.external_help_tip:hover p{
-    display:block;
-    transform-origin: 100% 0%;
-
-    -webkit-animation: fadeIn 0.3s ease-in-out;
+.external_help_tip:hover p {
+    display: inline-block;
     animation: fadeIn 0.3s ease-in-out;
 
 }
 
-.external_help_tip p{    /* The tooltip */
+.external_help_tip p {
+    /* The tooltip */
     display: none;
+    z-index: 1;
+    left: -18px;
+    top: 22px;
     text-align: left;
     background-color: #1E2021;
     padding: 20px;
-    width: 300px;
+    width: 370px; /*CHANGED */ 
     position: absolute;
     border-radius: 3px;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-    right: -4px;
     color: #FFF;
     font-size: 13px;
     line-height: 1.4;
 }
 
-.external_help_tip p:before{ /* The pointer of the tooltip */
+
+.external_help_tip p:before {
+    /* The pointer of the tooltip */
     position: absolute;
     content: '';
-    width:0;
-    height: 0;
     border:6px solid transparent;
     border-bottom-color:#1E2021;
-    right:10px;
     top:-12px;
 }
 
-.external_help_tip p:after{ /* Prevents the tooltip from being hidden */
-    width:100%;
-    height:40px;
-    content:'';
-    position: absolute;
-    top:-40px;
-    left:0;
-}
-
-/* CSS animation */
-
-@-webkit-keyframes fadeIn {
-    0% { 
-        opacity:0; 
-        transform: scale(0.6);
-    }
-
-    100% {
-        opacity:100%;
-        transform: scale(1);
-    }
-}
-
-@keyframes fadeIn {
-    0% { opacity:0; }
-    100% { opacity:100%; }
+.external_help_tip p .imp {
+    color: red;
 }
