--- a/core/templates/authenticated/charts/performance_breakdown.html
+++ b/core/templates/authenticated/charts/performance_breakdown.html
@@ -1,4 +1,10 @@
-<h4 class="header header4">{{ name }}&#39;s Performance</h4>
+<h4 class="header header4">{{ name }}&#39;s Performance 
+    <div class='external_help_tip'>
+        <p> This is your Performance Breakdown. You can check your performance in each subject by clicking on the specified tab and the overall tab to see your performance in all subjects.
+         You can further click on the bars in each graph. Click on the 'My Performance' bar to view your submission in each assignment and click on the 'Class Average' bar to see the Assignment performance distribution graph. </p>
+    </div>
+</h4>
+
 <div id='performance_breakdown'>
     <div>
         <ul id='subjectbar' class="nav nav-tabs">
