--- a/core/templates/authenticated/reportcard/classroom.html
+++ b/core/templates/authenticated/reportcard/classroom.html
@@ -1,4 +1,9 @@
-<h4 class='reportcard_header header header4'> Individual Performance </h4>
+<h4 class='reportcard_header header header4'> Individual Performance 
+    <div class='external_help_tip'>
+        <p> This is the Classroom Individual Performance Table. You can check each student's performance breakdown by clicking on the students name or overall average.
+            You can also click on the teacher's name to view that teachers subject performance in this class. </p>
+    </div>
+</h4>
 <table class="reportcard" id="classroom_reportcard">
     <thead>
     <tr>
