--- a/core/templates/authenticated/reportcard/subjectroom.html
+++ b/core/templates/authenticated/reportcard/subjectroom.html
@@ -1,4 +1,9 @@
-<h4 class='reportcard_header header header4'> Individual Performance </h4>
+<h4 class='reportcard_header header header4'> Individual Performance 
+    <div class='external_help_tip'>
+        <p> This is the Subject's Individual Performance Table. You can check each student's performance by clicking on the students name or overall average.
+            </p>
+    </div>
+</h4>
 <table class="reportcard" id="subjectroom_reportcard">
     <thead>
     <tr>
