--- a/core/templates/authenticated/widgets/student_subjectroom_performance.html
+++ b/core/templates/authenticated/widgets/student_subjectroom_performance.html
@@ -1,4 +1,8 @@
-<h6 class="header header4"> Subject Room Performance</h6>
+<h6 class="header header4"> Subject Room Performance 
+    <div class='external_help_tip'>
+        <p> This is the Subjectroom's Performance. One can view all past assignment performance in the shown graph. You can further click on the bars, 'My performance' bar taking you to the submission, while the 'Class Average' bar taking you to the Assignment Performance Distribution graph. </p>
+    </div>
+</h6>
 <div id="student_subjectroom_performance">
     <div id="single_subjectroom_bargraph" class='chart scroll'>
         {% include "authenticated/charts/chart_loader.html" only %}
