big css cleanup - CHECK FOR BUGS

--- a/core/static/css/assignment.css
+++ b/core/static/css/assignment.css
@@ -1,4 +1,4 @@
-#create_assignment,#readonly_assignment_form,#aql_info,#assignment_info,#submission_info,#uncorrected_submission_form{
+#create_assignment{
     margin-left: 10px;
 }
 
@@ -21,10 +21,6 @@ input{
     display:block;
 }
 
-#submit_button{
-    margin: 0px;    
-}
-
 .fieldWrapper{
 	margin-top:10px;
 }
@@ -33,92 +29,8 @@ input{
 	margin-top:20px;
 }
 
-.MathJax_Display{
-    text-align:left !important;
+#submit_button{
+    margin: 0px;
 }
 
-.question_element_img{
-    max-width:600px;
-}
 
-.show_hint_button{
-    background-color:#B3E0E7;
-}
-
-.hide_hint_button{
-    background-color:#B3E0E7;
-}
-
-#submission_info{
-    width:300px;
-}
-
-.due-font{
-    color:#B80000;
-}
-
-#revision_button{
-    background-color:#93C0F3;
-    border:solid 1px #b6b6b6;
-    margin-left:20px;
-    margin-top:4px;
-}
-
-.float-left{
-    float:left;
-}
-
-.progress-div{
-    float:right;
-}
-
-.submission_header{
-    font-size:24px;
-}
-
-.due-div{
-    font-size:24px;
-}
-
-.submission_well{
-    height:70px !important;
-    min-width: 1020px;
-    position:fixed;
-    width:83%;
-    z-index:999;
-}
-
-.submission_bar{
-    height:40px;
-}
-
-.percent_value{
-    margin-top:10px;
-    font-size:16px;
-}
-
-li{
-    font-size:17px;
-}
-
-ul{
-    list-style:none;
-}
-
-.question_subpart_field{
-    margin-left:-15px;
-}
-
-.question_elem{
-    border-bottom: solid 1px #b6b6b6;
-    margin-bottom: 20px;
-}
-
-.question_container_hint{
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.margin-top-90{
-    margin-top:90px;
-}
