--- a/core/templates/authenticated/question/show_revision_button.html
+++ b/core/templates/authenticated/question/show_revision_button.html
@@ -1,3 +1,3 @@
-<span id="revision" class="float-left">
+<span id="revision" class="floatleft">
 	<button type="button" id="revision_button" class="btn">Chapter Summary</button>
 </span>
