--- a/hwcentral/templates/modal.html
+++ b/hwcentral/templates/modal.html
@@ -8,7 +8,7 @@
           <h4 class="modal-title">{{ title }}</h4>
       </div>
       <div class="modal-body">
-        <p>{{ content }}</p>
+          <div>{{ content }}</div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
