--- a/hwcentral/templates/about.html
+++ b/hwcentral/templates/about.html
@@ -16,53 +16,36 @@
 {% endblock meta %}
 
 {% block base_body %}
-    <h1 class="well">About Us</h1>
-    <p class='about'> HW Central is an online homework platform for Indian schools. It is tailored specifically to improve the way students learn outside the classroom, and to streamline the way Homework is assigned and corrected, thus enabling teachers and schools to devote more time towards what they do best - teach. Automated correction, an expansive question bank, and an immersive interface, ensure a hassle-free teaching teaching environment. Online report cards and performance analytics provide parents and teachers unprecedented information about student progress and problem areas.</p>
+    <p class='about'> Homework Central is an online homework platform for Indian schools, specifically tailored to improve student learning. Our platform focuses on streamlining homework organisation and correction, enabling teachers and schools to devote more time towards doing what they love - teach. Our features include automated correction, expansive question banks, immersive interfaces and advanced analytics. In particular, our analytical tools provide schools, parents and teachers with a lot of useful, targeted data - improving educational outcomes in the classroom.</p>
 
-    <p class='lead'>Education just entered the 21st century.</p>
+    <p class='lead'>Education just entered the 21<sup>st</sup> century.</p>
 
-    <h2 class="well">Meet Our Team</h2>
-        <div class='row'>
+    <h2 class="well about_header">Founding Team</h2>
+        <div class='row founder_info'>
+
             <div class='col-md-4'>
-                <img class="founder_image" src="{% static 'img/about/Sidhant.jpg' %}">
+                <img class="founder_image" src="{% static 'img/about/Oasis_Vali.jpg' %}" >
+                <h4>Oasis Vali</h4>
+
+                <p>Oasis is a software developer interested in large-scale web service architecture with prior experience designing, deploying and maintaining low latency web services. He holds a Bachelor's degree in Mechatronics Engineering from the University of Waterloo and is interested in online education systems.</p>
+            </div>  
+
+            <div class='col-md-4'>
+                <img class="founder_image" src="{% static 'img/about/Sidhant_Pai.jpg' %}">
                 <h4>Sidhant Pai</h4>
 
-                <p>Sidhant is a graduate of the Massachusetts Institute of Technology and is very interested in
-                    integrating informal teaching techniques with mainstream education in India. He is a serial entrepreneur and is looking to change the way education is looked at in both urban and rural India. Born and raised in Pune, he is
-                    very familiar with the system and also has previous experience in teaching roles and is looking to apply the expertise he has gained along the way.</p>
+                <p>Sidhant holds a Bachelor's degree from the Massachusetts Institute of Technology and has a background in social enterprise and international development. He is keenly interested in the application of advanced analytics to improve educational outcomes and has prior experience with modelling systems.</p>
 
             </div>
         
-            
-            <div class='col-md-4'>
-                <img class="founder_image" src="{% static 'img/about/Oasis.jpg' %}" >
-                <h4>Oasis Vali</h4>
-
-                <p>Oasis is a Software Developer with a keen interest in large-scale web service architecture. He has worked on designing, deploying and maintaining low latency web services serving up to 400 million page requests per month. He holds a Bachelor's degree in Mechatronics Engineering from the University of Waterloo in Canada. He is interested in pushing the boundaries for the application of technology in Indian education, and having grown up in India, is familiar with the Indian education system. He is also a Delhi Public School, Pune alumnus.</p>
-            </div>  
 
 
             <div class='col-md-4'>
-                <img class="founder_image" src="{% static 'img/about/Sharang.jpg' %}" >
+                <img class="founder_image" src="{% static 'img/about/Sharang_Pai.jpg' %}" >
                 <h4>Sharang Pai</h4>
 
-                <p>Sharang is pursuing his studies in Computers and Communications at Manipal Institute of Technology and has always been interested in applications of online games as educational tools. As a co-founder of Homework Central, he aims to integrate technology with education to build a high quality tool that could supplement primary and secondary education in India. Having graduated through high school in India, he wants to eliminate the existing problems and build on the current system to make learning more interactive and complete.  </p>
+                <p>Sharang has a focused background in front-end web development and is interested in creating integrated and immersive online educational environments. He has prior experience with game design and game testing and is also interested in developing interactive educational tools for school students</p>
 
             </div>
         </div>
-    <div class='row'>
-        <div class='col-md-6'>
-            <img class="intern_image" src="{% static 'img/about/Hrishikesh.jpg' %}">
-            <h4>Hrishikesh Rao</h4>
-
-            <p>Hrishikesh is a fourth year student at the Manipal Institute of Technology, pursuing Mechatronics Engineering. He is interested in the way humans interact with technology. He has experience in developing E-learning websites to provide tutorials in selected fields. Familiar with the Indian education system, he is passionate to merge the model of E-learning with the stability of our education system.</p>
-
-            </div>
-        <div class='col-md-6'>
-            <img class="intern_image" src="{% static 'img/about/Pujan.jpg' %}">
-            <h4>Pujan Parikh</h4>
-            <p>Pujan is a Delhi Public School, Pune alumnus. Ever since an early age, he has been inclined towards the world of writing and literature and wishes to pursue it as a career. Having studied a great deal about computers and other technological phenomena throughout his school life, he aims to help HWCentral reach its goal and give its users the best they deserve.</p>
-
-        </div>
-    </div>
 {% endblock base_body %}
