--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -5,7 +5,7 @@ o{% extends "base.html" %}
 {% block title %} Register {% endblock title %}
 
 {% block base_css %}
-    <link rel="stylesheet" href="{% static 'css/form.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/register.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>
 {% endblock base_css %}
 
