--- a/core/static/css/submission_id.css
+++ b/core/static/css/submission_id.css
@@ -144,6 +144,9 @@ ul{
 
 .hide_solution_button{
 	background-color:#F9D672;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+
 }
 
 .show_solution_button{
@@ -158,18 +161,23 @@ ul{
 	background-color:rgba(255,255,255,0.85);
 }
 
+.question_subpart_hint {
+    background-color: #B3E0E7;
+    padding: 10px;
+}
+
+.question_subpart_solution {
+    background-color: #F9D672;
+    padding: 10px;
+}
+
 #corrected_submission_form .question_subpart_field{
     margin-left:0px !important;
     margin-top:10px;
 }
 
-#corrected_submission_form .field_wrapper{
-    margin-top:-20px !important;
-}
-
 #corrected_submission_form input[type=text]{
     margin-left:-5px !important;
-    margin-top:25px;
 }
 
 #revision_modal h1 {
