fixed tabbing look + chart loader

--- a/core/static/css/authenticated_base.css
+++ b/core/static/css/authenticated_base.css
@@ -94,9 +94,9 @@ a{
     width: 81vw;
     height: 60px;
 }
-.loadingimage2{
-    margin-left: 41%;
-    margin-top: 22%;
+.loadingtext{
+    margin-left: 43%;
+    margin-top: 23%;
 }
 .loadingimage1{
     position: absolute;
