--- a/core/templates/authenticated/charts/chart_loader.html
+++ b/core/templates/authenticated/charts/chart_loader.html
@@ -1,3 +1,3 @@
 {% load staticfiles %}
 <img class='loadingimage1' src="{% static 'img/page-loader1.gif' %}">
-<img class='loadingimage2' src="{% static 'img/page-loader2.gif' %}">
+<h3 class='loadingtext'> Loading ... </h3>
