--- a/core/templates/authenticated/widgets/classroom_performance.html
+++ b/core/templates/authenticated/widgets/classroom_performance.html
@@ -1,6 +1,6 @@
-<h4 id='classroom_performance_breakdown_header' class="header header4"></h4>
-<span id="classroom_performance_breakdown_help_tip_holder">
-    {% include 'authenticated/widgets/help_tip.html' with content="" only %}
+<h4 id='classroom_performance_breakdown_header' class="header header4">Class Room Performance Breakdown</h4>
+<span>
+    {% include 'authenticated/widgets/help_tip.html' with content="This is the Classroom Performance Breakdown. You can check each Subject's performance by clicking on the specified tab . You can further click on the bars of each graph. Click on the student's 'Section Average' bar to view the Subjectroom Assignment Performance Distribution graph for each assignment and click on the 'Standard Average' bar to see the Standard Assignment Performance Distribution graph" only %}
 </span>
 <div id='classroom_performance_breakdown'>
     <div>
