--- a/core/templates/authenticated/widgets/parent_subjectroom_link.html
+++ b/core/templates/authenticated/widgets/parent_subjectroom_link.html
@@ -1,3 +1,3 @@
 {% load core_extras %}
 
-{% include 'authenticated/widgets/sub_id_link.html' with title="Go to subjectroom "|add_str:subjectroom_label urlname=subjectroom_urlname id=subjectroom_id sub_id=child_id only %}
+{% include 'authenticated/widgets/sub_id_link.html' with label=subjectroom_label title="Go to subjectroom "|add_str:subjectroom_label urlname=subjectroom_urlname id=subjectroom_id sub_id=child_id only %}
