--- a/core/static/css/authenticated_base.css
+++ b/core/static/css/authenticated_base.css
@@ -351,3 +351,8 @@ tr.classroom_header{
 #subject_performance{
     margin-top:5px;
 }
+
+.no-data-img {
+    margin-left: 30px;
+    margin-top: 30px;
+}
