--- a/core/templates/authenticated/sidebar/listings.html
+++ b/core/templates/authenticated/sidebar/listings.html
@@ -7,9 +7,7 @@
 		    {% for element in listing.elements %}
 		        <div class="listing_element">
                     {% block sub_sidebar_listing_link %}
-                        {% with listing_type=listing.title|lower %}
-                            <p>{% include 'authenticated/widgets/link.html' with title="Go to "|add_str:listing_type|add_str:" "|add_str:element.label urlname=listing.urlname link=element only %}</p>
-                        {% endwith %}
+                        <p>{% include 'authenticated/widgets/link.html' with title="Go to "|add_str:element.label urlname=listing.urlname link=element only %}</p>
                     {% endblock sub_sidebar_listing_link %}
                 </div>
 		    {% endfor %}
