--- a/core/templates/authenticated/widgets/link.html
+++ b/core/templates/authenticated/widgets/link.html
@@ -1,11 +1,23 @@
 <a title="{{title}}" class="link" href="
-{% if link.id and link.section_id %}
-    {% url link.urlname link.id %}#{{ link.section_id }}
-{% elif link.id %}
-    {% url link.urlname link.id %}
-{% elif link.section_id %}
-    {% url link.urlname %}#{{ link.section_id }}
-{% else %}
-    {% url link.urlname %}
+{% if urlname %}    {# if urlname has been explicitly provided #}
+    {% if link.id and link.section_id %}
+        {% url urlname link.id %}#{{ link.section_id }}
+    {% elif link.id %}
+        {% url urlname link.id %}
+    {% elif link.section_id %}
+        {% url urlname %}#{{ link.section_id }}
+    {% else %}
+        {% url urlname %}
+    {% endif %}
+{% else %}  {# assume link object carries urlname #}
+    {% if link.id and link.section_id %}
+        {% url link.urlname link.id %}#{{ link.section_id }}
+    {% elif link.id %}
+        {% url link.urlname link.id %}
+    {% elif link.section_id %}
+        {% url link.urlname %}#{{ link.section_id }}
+    {% else %}
+        {% url link.urlname %}
+    {% endif %}
 {% endif %}
 ">{{ link.label }}</a>
