--- a/core/static/css/submission_id.css
+++ b/core/static/css/submission_id.css
@@ -25,8 +25,8 @@
 }
 
 #revision_button{
-    background-color:#93C0F3;
-    border:solid 1px #b6b6b6;
+    background-color: #B3E0E7;
+    border: solid 1px #A7A7A7;
     margin-left:20px;
     margin-top:4px;
 }
@@ -58,10 +58,6 @@ input{
     display:block;
 }
 
-.question_subpart_field .fieldWrapper {
-    margin-top: -10px;
-}
-
 .submission_well{
     height:70px !important;
     min-width: 1020px;
@@ -77,6 +73,7 @@ input{
 .percent_value{
     margin-top:10px;
     font-size:16px;
+    margin-left: 10px;
 }
 
 li{
@@ -188,4 +185,18 @@ ul{
 
 .question_subpart_field ul.errorlist li {
     padding-left: 10px;
+}
+
+.question_subpart_field .fieldWrapper {
+    margin-top: -10px;
+}
+
+.question_subpart_field .fieldWrapper input[type="text"] {
+    margin-top: 20px;
+}
+
+.question_subpart_field .fieldWrapper .correct_answer {
+    margin-left: 10px;
+    position: relative;
+    top: 2px;
 }
