--- a/core/templates/authenticated/widgets/subjectroom_assignment_performance_popup.html
+++ b/core/templates/authenticated/widgets/subjectroom_assignment_performance_popup.html
@@ -7,7 +7,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title"> Assignment Performance Distribution</h4>
         <span>
-            {% include 'authenticated/widgets/help_tip.html' with content="This is the Assignment Performance Distribution graph. It shows a histogram of the entire subjectroom&#39;s performance in this assignment. <div class='important'>For TEACHER/ADMIN:</div> Clicking on the bars of the histogram will take you to each student&#39;s individual assignment submission for further review"|safe only %}
+            {% include 'authenticated/widgets/help_tip.html' with content="This is the Assignment Performance Distribution graph. It shows a histogram of the entire subjectroom&#39;s performance in this assignment.<div class='newline'></div><div class='important'>TEACHER / ADMIN:</div> Clicking on the bars of the histogram will take you to each student&#39;s individual assignment submission for further review"|safe only %}
         </span>
       </div>
       <div class="modal-body">
