--- a/core/static/css/settings.css
+++ b/core/static/css/settings.css
@@ -1,3 +1,11 @@
+#change_password_button a{
+    background-color:#008B8B !important;
+    color:#fff !important;
+}
+
+#change_password_button a:hover{
+    color:#fff;
+}
 
 .topheader{
     font-family: Georgia, serif;
