--- a/core/templates/authenticated/settings/password_change.html
+++ b/core/templates/authenticated/settings/password_change.html
@@ -1,3 +1,3 @@
-<div class="btn btn-danger btn-sm floatleft" id="change_password_button">
+<div class="btn floatleft" id="change_password_button" title='Click here to change your password'>
     <a title="Click here to change your password" class="no-decoration" href="{% url 'password' %}">Change Password</a>
 </div>
