comments tended to

--- a/core/static/css/settings.css
+++ b/core/static/css/settings.css
@@ -1,6 +1,6 @@
 #change_password_button a{
-    background-color:#008B8B !important;
-    color:#fff !important;
+    background-color:#008B8B;
+    color:#fff;
 }
 
 #change_password_button a:hover{
