help tip warping fixed

--- a/core/static/css/help_tip.css
+++ b/core/static/css/help_tip.css
@@ -4,6 +4,8 @@
     border-radius: 50%;
     font-size: 14px;
     line-height: 26px;
+    height: 16px;
+    width: 24px;
     cursor: default;
     position: relative;
     display: inline;
