--- a/core/static/css/help_tip.css
+++ b/core/static/css/help_tip.css
@@ -4,7 +4,7 @@
     border-radius: 50%;
     font-size: 14px;
     line-height: 26px;
-    height: 16px;
+    height: 16px; /* adding height and width to prevent warping */
     width: 24px;
     cursor: default;
     position: relative;
