--- a/sphinx/templates/modules/mcsaq.html
+++ b/sphinx/templates/modules/mcsaq.html
@@ -1,8 +1,7 @@
 <br>
-<p id="typenum" class="hide">1</p>
 <select id="radOrDrop">
-    <option value="RadioButtons">Radio Buttons</option>
-    <option value="DropDown">Drop Down</option>
+    <option value="radio">Radio Buttons</option>
+    <option value="drop">Drop Down</option>
 </select>
 <br>
 <h3>Correct Answer</h3>
