--- a/sphinx/templates/app.html
+++ b/sphinx/templates/app.html
@@ -57,8 +57,8 @@
         </div>
     </div>
 
-    <select onChange="loadTemplate(this.value);">
-        <option value="Null">Select a template</option>
+    <select id="select_template" onChange="loadTemplate(this.value);">
+        <option value="0">Select a template</option>
         <option value="MCSAQ">MCSAQ</option>
         <option value="MCMAQ">MCMAQ</option>
         <option value="Numerical">Numerical</option>
