glitchy save button

--- a/core/templates/authenticated/submission_id/base.html
+++ b/core/templates/authenticated/submission_id/base.html
@@ -62,6 +62,6 @@
                 {% block submit_button %}{% endblock submit_button %}
             </form>
         {% endwith %}
-        <a id="charm-top" class="charm" title="Go To Top">Go To Top</a>
+        <a id="charm-top" class="charm" title="Go To Top"></a>
     </div>
 {% endblock authenticated_body %}
