--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -1,4 +1,4 @@
-<nav class='navbar navbar-inverse navbar-static-bottom' style="border-radius:0px; height:30px; padding-left:15px; padding-right:15px; width:100%;">
+<nav id='footer' class='navbar navbar-inverse navbar-static-bottom' style="border-radius:0px; height:30px; padding-left:15px; padding-right:15px; width:100%;">
 
 <div class="container-fluid">
 	<div class="navbar-header">
