--- a/sphinx/templates/app.html
+++ b/sphinx/templates/app.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/app.js' %}"></script>
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
+
+    <title>HWCentral Sphinx</title>
 </head>
 
 
