fixed index text

--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -71,7 +71,7 @@
                             <img class="med-opacity" style="width:135px; position:absolute; top:94px; left:295px;" src="{% static 'img/index/landing/Picture3_2.png' %}">
                             <img class="med-opacity" style="width:150px; height:160px; position:absolute; top:100px; left:540px;" src="{% static 'img/index/landing/Picture4.png' %}">
 
-                            <h3 style="position:absolute; top:265px; left:70px;">TEACH</h3>
+                            <h3 style="position:absolute; top:265px; left:70px;">ASSIGN</h3>
                             <h3 style="position:absolute; top:265px; left:280px;">EVALUATE</h3>
                             <h3 style="position:absolute; top:265px; left:540px;">ANALYSE</h3>
                         </span>
