--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="{% static "js/moment.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/datetime-moment.js" %}"></script>
     <script type="text/javascript" src="{% static "js/authenticated_base.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/sidebar.js" %}"></script>
     {% block authenticated_body_js %}{% endblock authenticated_body_js %}
 {% endblock base_js %}
 
