sphinx bug fixes

--- a/sphinx/templates/app.html
+++ b/sphinx/templates/app.html
@@ -87,7 +87,7 @@
     <br>
     <button type="button" onClick="generatePreview()">Generate Preview</button>
     <button type="button" onClick="downloadJSON()">Download JSON</button>
-    <button type="button" onClick="editJSON()">JSON Edit</button>
+    <button type="button" onClick="updateJSON()">JSON Update</button>
     <br><br>
     <textarea id="resultJSON"></textarea><br>
 </div>
