--- a/core/templates/authenticated/question/subpart.html
+++ b/core/templates/authenticated/question/subpart.html
@@ -34,5 +34,6 @@
             {% endif %}
         {% endif %}
         {% endblock subpart_field %}
+        {% block subpart_solution %}{% endblock subpart_solution %}
     </div>
 </div>
