full qa school setup

--- a/core/templates/authenticated/widgets/announcements_table.html
+++ b/core/templates/authenticated/widgets/announcements_table.html
@@ -1,6 +1,6 @@
 <div class='row'>
     <div>
-        <h4 class="header header4">Recent Announcement</h4>
+        <h4 class="header header4">Recent Announcements</h4>
         <span>
             {% include 'authenticated/widgets/help_tip.html' with content="These are your Recent Announcements. You can view all annoucements in this table. You can also sort annoucements by category by clicking on the up/down arrow next to the each of the categories." only %}
         </span>
