--- a/core/templates/password_reset/complete.html
+++ b/core/templates/password_reset/complete.html
@@ -3,6 +3,7 @@
 {% block title %} Password Reset Successful {% endblock title %}
 
 {% block base_body %}
+    <h4 class='well col-md-12'> Reset your Password</h4>
     <div class="indented_body_left">
         <p> Your password has been updated.  You may go ahead and log in now.</p>
 
