--- a/core/templates/activation/email_body.html
+++ b/core/templates/activation/email_body.html
@@ -1,12 +1,12 @@
 Welcome to {{ site_name }}!
 
-Your username, which you will use to log into {{ site_name }} is: {{ user.get_username }}
+Your account has been successfully set up. Your username is: {{ user.get_username }}
 
-Your account has been set up. click on the link below to activate your account and set your password:
+Please click on the link below to activate your account and set your password:
 
 {{ protocol}}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
 
-Have a great experience using {{ site_name }}!
+Feel free to reach out to us at +91 9825047325 or contact@hwcentral.in for any enquiries/feedback!
 
 Regards
 The {{ site_name }} Team
