split up cron files

--- a/hwcentral/templates/503.html
+++ b/hwcentral/templates/503.html
@@ -4,8 +4,9 @@
 
 {% block base_body %}
 <div class="indented_body_left">
-    <h2>HWCentral is currently down for scheduled maintenance</h2>
-    <p>Please check back during our regular service hours (4am-11pm). Thanks for your patience.</p>
+    <h2>Homework Central is currently down for scheduled maintenance</h2>
+
+    <p>Please check back during our regular service hours (4am-10pm). Thanks for your patience.</p>
 
     <p>Return to <a title="Return to home page" href="{% url 'index' %}">Home</a></p>
 </div>
