added error handlers to all submission images from backend

--- a/core/templates/authenticated/question/element.html
+++ b/core/templates/authenticated/question/element.html
@@ -5,6 +5,6 @@
         </div>
     {% endif %}
     {% if element.img %}
-        <img class="question_element_img" src="{{ element.img_url }}"/>
+        <img class="question_element_img" src="{{ element.img_url }}" onerror="img_reload(this);"/>
     {% endif %}
 </div>
