--- a/core/templates/authenticated/submission_id/base.html
+++ b/core/templates/authenticated/submission_id/base.html
@@ -6,6 +6,7 @@
 {% block title %} Assignment {% endblock title %}
 
 {% block authenticated_body_js %}
+    <script type="text/javascript" src="{% static "js/img_reloader.js" %}"></script>
     {# skipping protocol so that both http and https work and using most inclusive config file #}
     <script type="text/javascript"
             src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
